# FreeRTOS_TMS570

FreeRTOS/Demo/CORTEX_R4_RM48_TMS570_CCS5/: CMakeLists.txt  Makefile  TMS570.cmd  cmake_install.cmake  initial_cache.cmake  pot_control.c  ti_toolchain.cmake
FreeRTOS/Demo/CORTEX_R4_RM48_TMS570_CCS5/startup/: sys_startup.c
